
* Transliteration from Arabic to English supports now: UNGEGN, UNGEGN+ (i.e. with
  diaritical marks), RJGC, SES, and ISO 233 standards.

* Enhance Numbers sub class to spell ordering numbers in Arabic idiom also.
  
* Add two extra methods into CharsetC sub class to convert Arabic text from UTF-8 
  and ISO-8859-6 charset into HTML entities named as "iso2html" and "utf2html".
  
* Fix the transliteration issue of ال precedes a word beginning with one of the
  "sun letters", and issue of ة when it used in combined words to romanized as 
  t instead of h.

* Move out "js" sub directory and keyboard example to keep it pure PHP code.

* Convert time presented in the "Info.php" example to GMT based on the server time 
  zone offset.

  
What's new in ArPHP 3.0.0 beta (release date: Feb 5, 2012)
-----------------------------------------------------

* PEAR structure and naming style.

* Convert all internal encoding into UTF-8.
  
* Standardize Salat sub class setDate parameters order (it is now: Month, Day, 
  and Year), and setLocation parameters order (it is now: Latitude, Longitude, 
  and Zone).

* Review Salat time's calculations in the "getPrayTimes2" method and fix few
  bugs (missing decimals in rounded numbers, RA rounded rule), we also added
  elevation parameter which may affect sunrise and sunset estimation.
  
* Add int2indic method into Numbers sub class to represent integer numbers in 
  Arabic-Indic digits using HTML entities.

* Add "header" method into main Arabic class to set/send output charset in several 
  output media in a proper way (this includes http, html, text_email, html_email, 
  mysql, mysqli, and pdo).

* Add new method "getBrowserLang" to the main class to detect chosen/default 
  browser language using ISO 639-1 2-letter codes (i.e ar, en, fr, ...)

* Enhance Normalise sub class by import set of Mr. Taha Zerrouki <taha.zerrouki@gmail.com> 
  PyArabic library functions (this includes: isTashkeel, isHaraka, isShortharaka, 